# MMTTE

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
configs/: default.yaml  endpoints.yaml  real_training.yaml
configs/benchmarks/: mmsygnal.yaml
configs/experiments/: demo.yaml  experiment0_open_gdc_os.yaml  experiment1_controlled_commpass_pfs.yaml  experiment2_ttnt_proxy.yaml  hss_open_gdc_os.yaml  rebaseline_open_gdc_os.yaml  regularization_open_gdc_os.yaml  stageD_open_gdc_os.yaml  subtype_validation_open_gdc_os.yaml
configs/features/: clinical.yaml  cytogenetics.yaml  (+2 more)
docs/: FRAMING_SUBTYPE_AWARE_NULL.md  benchmark_status.md  code_audit.md  comparator_registry.md  contribution_and_results.md  data_usability.md  debug_agent_result.md  experiment0_framing.md  experiment0_os_benchmark.md  experiment0_state.md  experiment1_program_vs_pca.md  ijcs_compliance_matrix.md  literature_cnv_fish_concordance.md  mmSYGNAL_method_reproduction.md  mmrf_community_value.md  mmsygnal_unblock_plan.md  model_math.md  pfs_data_acquisition_plan.md  phase1_verification.md  preregistration_hss.md  roadmap.md  stageA_rebaseline.md  subtype_label_validation.md  v12_v20_audit.md
experiments/: agenda.yaml
outputs/: REAL_DATA_SUMMARY.md  demo_audit.json  demo_audit.md  real_audit.json  real_audit.md  real_audit_interim.json  real_audit_interim.md
scripts/: README.md  run_all.sh
tests/: test_hss.py  test_language_guardrails.py  test_losses.py  test_metric_consistency.py  test_mmsygnal_guardrails.py  test_omics_pca.py  test_pipeline_smoke.py  test_refactor_smoke.py  test_regularization.py  test_stage_d.py  test_validation.py
(+236 files in other folders)
