[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-tte-opisd"
version = "0.1.0"
description = "Cytogenetic subtype-aware multiple myeloma time-to-event modeling with Cox, AFT, first-hitting-time, and on-policy self-distillation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "torch>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
mm-tte = "mm_tte_survival.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
